# url-shortner

./: main.py  models.py  pyproject.toml  schemas.py  shorten_url.py
instance/: project.db
